fixed spacing between text on front

--- a/css/wedding_style.css
+++ b/css/wedding_style.css
@@ -78,7 +78,7 @@ html, body {
 
 .card-front h2 {
     margin-bottom: 40px;
-	margin-top: 60px;
+	margin-top: 50px;
     font-size: 36px;
     font-family: sloop-script-pro, sans-serif;
     font-weight: 400;
